<resources>
    <string name="app_name">Calculator</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="op_add">＋</string>
    <string name="op_sub">－</string>
    <string name="op_mul">×</string>
    <string name="op_div">÷</string>
    <string name="op_rat">％</string>
    <string name="op_log">㏒</string>
    <string name="point">.</string>
    <string name="equal">＝</string>
    <string name="delete">＜</string>
    <string name="clear">C</string>
</resources>
