<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  
    tools:context="com.ahstu.corki.calculator.CalculatorActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView"
        android:background="@drawable/button"
        android:textColor="@color/grey31"/>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="280dp"
        android:layout_marginRight="90dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_clear"
                android:layout_width="90dp"
                android:layout_height="68dp"
                android:text="@string/clear"
                android:textSize="25sp"
                android:layout_column="0"
                android:textColor="@color/grey31"
                android:background="@drawable/button" />

            <Button
                android:id="@+id/button_delete"
                android:layout_width="90dp"
                android:layout_height="68dp"
                android:text="@string/delete"
                android:textSize="25sp"
                android:layout_column="1"
                android:textColor="@color/grey31"
                android:background="@drawable/button"/>

            <Button
                android:id="@+id/button_div"
                android:layout_width="90dp"
                android:layout_height="68dp"
                android:text="@string/op_div"
                android:textSize="25sp"
                android:layout_column="2"
                android:textColor="@color/grey31"
                android:background="@drawable/button"/>


        </TableRow><!--raw1-->



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_num7"
                android:layout_width="90dp"
                android:layout_height="68dp"
                android:text="@string/num7"
                android:textSize="25sp"
                android:layout_column="0"
                android:textColor="@color/grey31"
                android:background="@drawable/button"/>

            <Button
                android:id="@+id/button_num8"
                android:layout_width="90dp"
                android:layout_height="68dp"
                android:text="@string/num8"
                android:textSize="25sp"
                android:layout_column="1"
                android:textColor="@color/grey31"
                android:background="@drawable/button"/>

            <Button
                android:id="@+id/button_num9"
                android:layout_width="90dp"
                android:layout_height="68dp"
                android:text="@string/num9"
                android:textSize="25sp"
                android:layout_column="2"
                android:textColor="@color/grey31"
                android:background="@drawable/button"/>


        </TableRow><!--raw2-->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button_num4"
                android:layout_width="90dp"
                android:layout_height="68dp"
                android:text="@string/num4"
                android:textSize="25sp"
                android:layout_column="0"
                android:textColor="@color/grey31"
                android:background="@drawable/button"/>

            <Button
                android:id="@+id/button_num5"
                android:layout_width="90dp"
                android:layout_height="68dp"
                android:text="@string/num5"
                android:textSize="25sp"
                android:layout_column="1"
                android:textColor="@color/grey31"
                android:background="@drawable/button"/>

            <Button
                android:id="@+id/button_num6"
                android:layout_width="90dp"
                android:layout_height="68dp"
                android:text="@string/num6"
                android:textSize="25sp"
                android:layout_column="2"
                android:textColor="@color/grey31"
                android:background="@drawable/button"/>

            
        </TableRow><!--raw3-->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_num1"
                android:layout_width="90dp"
                android:layout_height="68dp"
                android:text="@string/num1"
                android:textSize="25sp"
                android:layout_column="0"
                android:textColor="@color/grey31"
                android:background="@drawable/button"/>

            <Button
                android:id="@+id/button_num2"
                android:layout_width="90dp"
                android:layout_height="68dp"
                android:text="@string/num2"
                android:textSize="25sp"
                android:layout_column="1"
                android:textColor="@color/grey31"
                android:background="@drawable/button"/>

            <Button
                android:id="@+id/button_num3"
                android:layout_width="90dp"
                android:layout_height="68dp"
                android:text="@string/num3"
                android:textSize="25sp"
                android:layout_column="2"
                android:textColor="@color/grey31"
                android:background="@drawable/button" />
            
            
        </TableRow><!--raw4-->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button_rat"
                android:layout_width="90dp"
                android:layout_height="68dp"
                android:text="@string/op_rat"
                android:textSize="25sp"
                android:layout_column="0"
                android:textColor="@color/grey31"
                android:background="@drawable/button"/>

            <Button
                android:id="@+id/button_num0"
                android:layout_width="90dp"
                android:layout_height="68dp"
                android:text="@string/num0"
                android:textSize="25sp"
                android:layout_column="1"
                android:textColor="@color/grey31"
                android:background="@drawable/button"/>

            <Button
                android:id="@+id/button_point"
                android:layout_width="90dp"
                android:layout_height="68dp"
                android:text="@string/point"
                android:textSize="25sp"
                android:layout_column="2"
                android:textColor="@color/grey31"
                android:background="@drawable/button"/>



        </TableRow><!--raw5-->
    </TableLayout>

    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="340dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical"
        android:background="@drawable/button">
        <Button
            android:id="@+id/button_mul"
            android:layout_width="90dp"
            android:layout_height="68dp"
            android:text="@string/op_mul"
            android:textSize="25sp"
            android:textColor="@color/grey31"
            android:background="@drawable/button"/>

        <Button
            android:id="@+id/button_sub"
            android:layout_width="90dp"
            android:layout_height="68dp"
            android:text="@string/op_sub"
            android:textSize="25sp"
            android:textColor="@color/grey31"
            android:background="@drawable/button"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="90dp"
            android:layout_height="68dp"
            android:text="@string/op_add"
            android:textSize="25sp"
            android:textColor="@color/grey31"
            android:background="@drawable/button"/>

        <Button
            android:id="@+id/button_equal"
            android:layout_width="90dp"
            android:layout_height="136dp"
            android:text="@string/equal"
            android:textSize="25sp"
            android:textColor="@color/grey31"
            android:background="@drawable/button"/>
    </LinearLayout>

</RelativeLayout>
